fix: Simplify Dockerfile and add public folder

--- a/happle-reservation/frontend/Dockerfile
+++ b/happle-reservation/frontend/Dockerfile
@@ -1,18 +1,15 @@
 # Frontend Dockerfile - Multi-stage build
-# Stage 1: Dependencies
-FROM node:20-alpine AS deps
+FROM node:20-alpine AS builder
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
+# Copy package files
 COPY package.json package-lock.json* ./
+
 # Install ALL dependencies (including devDependencies for build)
 RUN npm ci
 
-# Stage 2: Builder
-FROM node:20-alpine AS builder
-WORKDIR /app
-
-COPY --from=deps /app/node_modules ./node_modules
+# Copy source code
 COPY . .
 
 # Set build-time environment variables
@@ -22,7 +19,7 @@ ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:5000}
 # Build the application
 RUN npm run build
 
-# Stage 3: Runner
+# Stage 2: Runner
 FROM node:20-alpine AS runner
 WORKDIR /app
 
@@ -45,4 +42,3 @@ ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
 CMD ["node", "server.js"]
-
