feat: 固定枠・自由枠予約の両方に対応
- バックエンド: 固定枠予約(/api/reservations)と自由枠予約(/api/reservations/choice)を実装
- フロントエンド: 予約タイプ選択UI、自由枠スケジュール/予約フォームを追加
- ゲスト予約フロー: メンバー自動作成→チケット自動付与→予約作成
- エラーハンドリング強化: hacomonoエラーを日本語メッセージに変換
- Docker対応: ポート5021で起動可能
- ドキュメント: 予約に必要な条件・制約をまとめたreservation-requirements.md追加

--- a/happle-reservation/backend/Dockerfile
+++ b/happle-reservation/backend/Dockerfile
@@ -22,13 +22,13 @@ COPY . .
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
 USER appuser
 
-# Expose port
-EXPOSE 5000
+# Expose port (configurable via PORT env)
+EXPOSE 5021
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:5000/api/health')" || exit 1
+    CMD python -c "import urllib.request; import os; urllib.request.urlopen(f'http://localhost:{os.environ.get(\"PORT\", 5021)}/api/health')" || exit 1
 
-# Run with gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "2", "--timeout", "120", "--access-logfile", "-", "--error-logfile", "-", "app:app"]
+# Run with gunicorn (port configurable via PORT env)
+CMD ["sh", "-c", "gunicorn --bind 0.0.0.0:${PORT:-5021} --workers 2 --timeout 120 --access-logfile - --error-logfile - app:app"]
 
